[gd_scene load_steps=14 format=3 uid="uid://sfinjguu5eqh"]

[ext_resource type="Script" path="res://logic/plane/plane.gd" id="1_agcie"]
[ext_resource type="Texture2D" uid="uid://djw40ufctbg5c" path="res://art/plane/plane.png" id="2_nsr61"]
[ext_resource type="Texture2D" uid="uid://b2bkbuaxcr4o1" path="res://art/plane/plane2.png" id="3_6dvle"]
[ext_resource type="Script" path="res://logic/plane/plane_description.gd" id="4_iu7ly"]
[ext_resource type="VideoStream" path="res://art/plane/explosion.ogv" id="5_1vdm7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hlp05"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kaubd"]
radius = 7.07107

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grdkt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dinf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w28rx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0e430"]

[sub_resource type="SystemFont" id="SystemFont_2hn8o"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_78tov"]
Button/styles/focus = SubResource("StyleBoxEmpty_grdkt")
Button/styles/hover = SubResource("StyleBoxEmpty_8dinf")
Button/styles/normal = SubResource("StyleBoxEmpty_w28rx")
Button/styles/pressed = SubResource("StyleBoxEmpty_0e430")
Label/colors/font_color = Color(0, 0.682353, 1, 1)
Label/font_sizes/font_size = 13
Label/fonts/font = SubResource("SystemFont_2hn8o")

[node name="plane_body" type="CharacterBody2D" groups=["plane"]]
script = ExtResource("1_agcie")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hlp05")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kaubd")

[node name="body" type="Sprite2D" parent="."]
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_nsr61")

[node name="direction" type="Sprite2D" parent="."]
position = Vector2(2.87969, 0)
scale = Vector2(0.0851562, 0.1)
texture = ExtResource("3_6dvle")
offset = Vector2(450, 0)

[node name="plane_description" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_78tov")
script = ExtResource("4_iu7ly")

[node name="VBoxContainer" type="VBoxContainer" parent="plane_description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.518
anchor_right = 0.115
anchor_bottom = 0.518
offset_left = 16.0
offset_top = -15.0
offset_right = 99.0
offset_bottom = 17.0

[node name="callsign" type="Label" parent="plane_description/VBoxContainer"]
layout_mode = 2
text = "AAA0000"

[node name="HBoxContainer" type="HBoxContainer" parent="plane_description/VBoxContainer"]
layout_mode = 2

[node name="heading" type="Label" parent="plane_description/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "000Â°"

[node name="altitude" type="Label" parent="plane_description/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00000ft"

[node name="plane_button" type="Button" parent="plane_description"]
layout_mode = 0
offset_left = -12.0
offset_top = -17.0
offset_right = 101.0
offset_bottom = 16.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_direction = 1
offset_left = -34.0
offset_top = -35.0
offset_right = 34.0
offset_bottom = 35.0
audio_track = 2
stream = ExtResource("5_1vdm7")
expand = true

[node name="direct_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="data_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="plane_description/plane_button" to="plane_description" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="plane_description/plane_button" to="plane_description" method="_on_button_mouse_exited"]
[connection signal="pressed" from="plane_description/plane_button" to="." method="_on_plane_button_pressed"]
[connection signal="timeout" from="direct_timer" to="." method="_on_direct_timer_timeout"]
[connection signal="timeout" from="data_timer" to="." method="_on_timer_timeout"]
